<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bg_round_top"
    android:backgroundTint="@color/blue_gray_50"
    android:orientation="vertical">

    <com.willis.ai_assistant3.widget.TopBar
        android:id="@+id/create_chat_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:top_bar_title="@string/create_chat_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Spinner
        android:id="@+id/create_chat_spinner"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_spinner"
        android:dropDownVerticalOffset="64dp"
        android:foreground="?attr/selectableItemBackgroundBorderless" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/create_chat_nickname"
        android:textColorHint="@color/blue_400"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/blue_400">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_chat_edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:maxLength="20"
            android:minHeight="64dp"
            android:textColor="@color/gray_900"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_chat_btn_save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/create_chat_save"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/blue_400"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_save_24dp"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="@color/white"
        app:rippleColor="@color/blue_200" />

</LinearLayout>